[package]
name = "bort"
version = "0.1.0"
edition = "2021"

[dependencies]
# ash is a lightweight vulkan wrapper
ash = "0.37.2"
ash-window = "0.12"
raw-window-handle = "0.5"
# AMD vulkan memory allocator bindings (https://github.com/lilly-lizard/bort-vma)
bort-vma = { git = "https://github.com/lilly-lizard/bort-vma/", ref = "bc80e6b" }
