[package]
name = "bort-vk"
version = "0.2.2"
description = "lightweight vulkan wrapper"
license = "MIT"
keywords = ["vulkan", "wrapper", "ash", "3D", "graphics"]
categories = ["rendering::graphics-api"]
readme = "../README.md"
repository = "https://github.com/lilly-lizard/bort"
homepage = "https://github.com/lilly-lizard/bort"
edition = "2021"

[dependencies]
# ash is a lightweight vulkan wrapper
ash = "0.37.2"
ash-window = "0.12"
raw-window-handle = "0.5"
# AMD vulkan memory allocator bindings (https://github.com/lilly-lizard/bort-vma)
bort-vma = { version = "0.3.1", path = "../bort-vma" }
