[package]
name = "bort-vk"
version = "0.2.4"
description = "lightweight vulkan wrapper"
license = "MIT"
keywords = ["vulkan", "wrapper", "ash", "3D", "graphics"]
categories = ["rendering::graphics-api"]
readme = "../README.md"
repository = "https://github.com/lilly-lizard/bort"
homepage = "https://github.com/lilly-lizard/bort"
edition = "2021"

[dependencies]
# ash is a lightweight vulkan wrapper
ash = "0.37.3"
# AMD vulkan memory allocator bindings (https://github.com/lilly-lizard/bort-vma)
bort-vma = { version = "0.3.4", path = "../bort-vma" }
# raw window handler allows us to create a surface from an os window handle. allow support for
# multiple versions depending on e.g. winit version.
raw-window-handle-05 = { package = "raw-window-handle", version = "0.5", features = ["std"], optional = true }
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6", features = ["std"], optional = true }
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.3"

[features]
default = ["raw-window-handle-06"]
raw-window-handle-05 = ["dep:raw-window-handle-05"]
raw-window-handle-06 = ["dep:raw-window-handle-06"]