[package]
name = "bort-vk"
version = "0.2.7"
description = "lightweight vulkan wrapper"
license = "MIT/Apache-2.0"
keywords = ["vulkan", "wrapper", "ash", "3D", "graphics"]
categories = ["rendering::graphics-api"]
readme = "../README.md"
repository = "https://github.com/lilly-lizard/bort"
homepage = "https://github.com/lilly-lizard/bort"
edition = "2021"

[features]
default = ["raw-window-handle-06", "bytemuck", "loaded"]
raw-window-handle-05 = ["dep:raw-window-handle-05", "dep:raw-window-metal-03"]
raw-window-handle-06 = ["dep:raw-window-handle-06", "dep:raw-window-metal-04"]
bytemuck = ["dep:bytemuck"]
linked=["ash/linked"]
loaded=["ash/loaded"]

[dependencies]
# ash is a lightweight vulkan wrapper
ash = { version = "0.38", default-features = false, features = ["debug"] }
# AMD vulkan memory allocator bindings (https://github.com/lilly-lizard/bort-vma)
bort-vma = { version = "0.3.4", path = "../bort-vma" }
# for an easy way to upload misc data to the gpu from rust
bytemuck = { version = "1.14", optional = true, features = ["extern_crate_std"] }
# raw window handler allows us to create a surface from an os window handle. allow support for
# multiple versions depending on e.g. winit version.
raw-window-handle-05 = { package = "raw-window-handle", version = "0.5", features = ["std"], optional = true }
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6", features = ["std"], optional = true }
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal-03 = { package = "raw-window-metal", version = "0.3", optional = true }
raw-window-metal-04 = { package = "raw-window-metal", version = "0.4", optional = true }